Table app_user {
  id integer [pk, increment]
  username text [unique]
  password_hash text
  display_name text [not null]
  is_demo integer [not null, default: 0]
  created_at text [not null]
}

Table user_onboarding {
  user_id integer [pk, ref: > app_user.id]
  entry_choice text [not null, note: 'PRODUCT | ROUTINE | EXPLORE']
  selected_product_count integer [not null, default: 0]
  completed_at text [not null]
}

Table product {
  id integer [pk]
  brand text [not null]
  name text [not null]
  category text [not null]
  volume text
  version_label text
  description text [not null, note: '출처 미확인 카탈로그 설명, 제품별 AI 가이드 입력으로만 사용']
  texture text [note: '등록 제형 label; 비사실 guide 생성에만 사용하며 source-backed fact가 아님']
  verified integer [not null, note: 'legacy flag; public verified는 source fact 존재를 함께 검사']
  facts_json text [not null, note: '출처 미확인 카탈로그 특징, 가이드 입력으로만 사용하며 source fact로 승격하지 않음']
  image_url text
}

Table product_catalog_content {
  product_id integer [pk, ref: > product.id]
  summary text [not null]
  routine_step text [not null]
  usage_type text [not null]
  usage_timing_json text [not null]
  usage_tips_json text [not null, note: 'legacy physical name; API usageInstructions 일반 사용법 배열']
  observation_points_json text [not null, note: 'legacy physical name; API highlights {title, detail} 제품 특징 배열']
  origin text [not null, note: 'AI_GENERATED | EDITORIAL']
  generated_at text [not null]
}

Table product_source_fact {
  id integer [pk, increment]
  product_id integer [not null, ref: > product.id]
  fact_type text [not null, note: 'DIRECTIONS | TEXTURE | LABEL_CLAIM | CAUTION | SUN_PROTECTION | INGREDIENT_LABEL | CERTIFICATION']
  fact_text text [not null]
  source_label text [not null]
  source_url text [not null]
  checked_at text [not null]
  created_at text [not null]

  indexes {
    (product_id, fact_type, fact_text, source_url) [unique]
    (product_id, id)
  }
}

Table user_product {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  product_id integer [ref: > product.id]
  custom_brand text
  custom_name text
  custom_category text
  memo text
  added_at text [not null]
}

Table routine {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  name text [not null]
  day_part text [not null, note: 'MORNING | EVENING | ANYTIME']
  status text [not null, note: 'CURRENT | BASELINE | PAST']
  based_on_routine_id integer [ref: > routine.id]
  started_at text [not null]
  ended_at text
}

Table routine_item {
  id integer [pk, increment]
  routine_id integer [not null, ref: > routine.id]
  user_product_id integer [not null, ref: > user_product.id]
  time_slot text [not null, note: 'MORNING | EVENING | BOTH']
  position integer [not null]
  frequency text [not null]
}

Table experience_session {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  subject_type text [not null, note: 'ROUTINE | PRODUCT']
  routine_id integer [ref: > routine.id]
  user_product_id integer [ref: > user_product.id]
  title text [not null]
  status text [not null, note: 'ACTIVE | COMPLETED | CANCELLED']
  started_at text [not null]
  review_due_at text [not null]
  ended_at text
  end_reason text
  client_request_id text
}

Table experience_record {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  session_id integer [ref: > experience_session.id]
  user_product_id integer [ref: > user_product.id]
  sentiment text [not null, note: 'LIKED | DISAPPOINTED | UNSURE']
  note text [not null]
  discomfort text [not null, note: 'NOT_REPORTED | REPORTED | UNKNOWN']
  adherence text [not null, note: 'MATCHED | PARTIAL | DIFFERENT | UNKNOWN']
  created_at text [not null]
  client_request_id text [not null]
}

Table experience_tag {
  record_id integer [not null, ref: > experience_record.id]
  label text [not null]
  indexes { (record_id, label) [pk] }
}

Table comparison_baseline {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  routine_id integer [not null, ref: > routine.id]
  confirmed_record_id integer [ref: > experience_record.id]
  started_at text [not null]
  ended_at text
}

Table personal_pattern {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  title text [not null]
  summary text [not null]
  confidence_note text [not null]
  status text [not null, note: 'ACTIVE | HIDDEN']
  created_at text [not null]
  updated_at text [not null]
}

Table pattern_evidence {
  pattern_id integer [not null, ref: > personal_pattern.id]
  record_id integer [not null, ref: > experience_record.id]
  polarity text [not null, note: 'SUPPORTS | CONTRADICTS']
  indexes { (pattern_id, record_id) [pk] }
}

Table conversation {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  mode text [not null, note: 'GENERAL | PRODUCT | RECOMMEND | PATTERN | RESCUE']
  product_id integer [ref: > product.id]
  experience_id integer [ref: > experience_session.id]
  status text [not null, note: 'OPEN | CLOSED']
  created_at text [not null]
  updated_at text [not null]
}

Table conversation_message {
  id integer [pk, increment]
  conversation_id integer [not null, ref: > conversation.id]
  role text [not null, note: 'USER | ASSISTANT']
  content text [not null]
  suggested_replies_json text [not null]
  evidence_refs_json text [not null]
  status text [not null, note: 'READY | FALLBACK | FAILED']
  client_request_id text
  created_at text [not null]
}

Table conversation_message_source {
  message_id integer [not null, ref: > conversation_message.id]
  source_order integer [not null]
  title text [not null]
  url text [not null]
  source_tier text [not null, note: 'P1 | P2 | P3 | P4']
  indexes {
    (message_id, source_order) [pk]
    (message_id, url) [unique]
  }
}

Table rescue_plan {
  id integer [pk, increment]
  conversation_id integer [not null, unique, ref: > conversation.id]
  base_routine_id integer [ref: > routine.id]
  remove_user_product_id integer [ref: > user_product.id]
  title text [not null]
  rationale text [not null]
  status text [not null, note: 'PROPOSED | APPLIED | DECLINED | BLOCKED']
  applied_experience_id integer [ref: > experience_session.id]
  created_at text [not null]
}
